@@ -25,10 +25,12 @@
 
 	0.6.0 (Christian Rechner)
 	
+		- Added license file for LGPL license
 		- Added interface for file system abstraction layer
 		- Added support for value types:
 		  * dt_ushort
 		  * dt_ushort_beo
+		  * dt_int*
 		
 
 	0.5.6 (Christian Rechner)
